# ProjectRetro

./: .gitignore  README.md  config.rle  make_project.bat  make_project.sh
source/: CMakeLists.txt  Main.cpp  World.h
source/build_utilities/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
source/game/: App.cpp  App.h  ECS.cpp  ECS.h  Main.cpp
source/game/common/: GameConstants.h
source/game/common/components/: CursorComponent.h  DirectionComponent.h  EvolutionAnimationStateSingletonComponent.h  GameIntroStateSingletonComponent.h  GuiStateSingletonComponent.h  ItemCountSelectorStateComponent.h  ItemMenuStateComponent.h  ItemStatsSingletonComponent.h  MarketStocksSingletonComponent.h  MoveStatsSingletonComponent.h  NameSelectionStateSingletonComponent.h  PlayerStateSingletonComponent.h  PlayerTagComponent.h  PokeMartDialogStateComponent.h  PokeMartDialogStateSingletonComponent.h  PokedexStateSingletonComponent.h  PokemonBaseStatsSingletonComponent.h  PokemonSelectionViewStateSingletonComponent.h  PokemonStatsDisplayViewStateSingletonComponent.h  TextboxComponent.h  TextboxResidentComponent.h  TrainersInfoStatsSingletonComponent.h  TransformComponent.h
source/game/common/flowstates/: AbandonLearningNewMoveFlowState.cpp  AbandonLearningNewMoveFlowState.h  AwardExperienceEncounterFlowState.cpp  AwardExperienceEncounterFlowState.h  AwardLevelFlowState.cpp  AwardLevelFlowState.h  BallAnimationEncounterFlowState.cpp  BallAnimationEncounterFlowState.h  BallUsageEncounterFlowState.cpp  BallUsageEncounterFlowState.h  (+246 more)
source/game/common_components/: TransformComponent.h
source/game/common_utils/: FileUtils.h  Logging.h  MathUtils.h  MessageBox.h  StringId.h  StringUtils.h  Timer.h  TypeTraits.cpp  TypeTraits.h
source/game/components/: PlayerTagComponent.h
source/game/overworld/: OverworldConstants.h
source/game/resources/: DataFileLoader.cpp  DataFileLoader.h  DataFileResource.cpp  DataFileResource.h  IResource.h  IResourceLoader.h  MeshLoader.cpp  MeshLoader.h  MeshResource.cpp  MeshResource.h  MeshUtils.cpp  MeshUtils.h  MusicLoader.cpp  MusicLoader.h  MusicResource.cpp  MusicResource.h  ResourceLoadingService.cpp  ResourceLoadingService.h  SfxLoader.cpp  SfxLoader.h  SfxResource.cpp  SfxResource.h  ShaderLoader.cpp  ShaderLoader.h  ShaderResource.cpp  ShaderResource.h  TextureLoader.cpp  TextureLoader.h  TextureResource.cpp  TextureResource.h  TextureUtils.h
source/game/sound/: SoundService.cpp  SoundService.h
source/game/util/: MathUtils.h  StringId.h  StringUtils.h  Timer.h  TypeTraits.h
(+267 files in other folders)
